# bevy_text_mesh

./: CHANGELOG.md  Cargo.toml  PR_SUMMARY.md  README.md
examples/: 2d_text.rs  3d_scene.rs  performance.rs
src/: font_loader.rs  mesh_cache.rs  mesh_data_generator.rs  mesh_system.rs  text_mesh.rs
