[workspace]

[package]
name = "bevy_text_mesh"
version = "0.9.0"
edition = "2021"
description = "A bevy 3D text mesh generator for displaying text"
repository = "https://github.com/blaind/bevy_text_mesh"
keywords = ["bevy"]
categories = ["game-engines"]
license = "MIT"
readme = "README.md"

[dependencies]
fontmesh = "0.2.0"
bitflags = "2.1"
anyhow = "1.0"
glyph_brush_layout = "0.2.3"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_render", "bevy_text", "bevy_pbr", "bevy_asset", "bevy_sprite", "zstd_rust"]

[dev-dependencies]
rand = "0.8.4"

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = [
  "bevy_winit",
  "bevy_render",
  "bevy_text",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_sprite_render",  # CRITICAL: Actual sprite rendering system
  "default_font",         # CRITICAL: Default font for Text2d
  "x11",
  "tonemapping_luts",
  "zstd_rust",
  "png",
]

[features]
default = []
unstable = []
